Updating memory JVM params